# car_cpp

./: .gitignore  CMakeLists.txt  README.md
car/: CMakeLists.txt
car/src/: main.cpp
car/src/domain/: car.cpp  car.h  engine.cpp  engine.h  pwm.cpp  pwm.h  steer.h
car/src/rest/: abstract_rest_resource.h  car_resource.cpp  car_resource.h  lifeline_resource.cpp  lifeline_resource.h  rest.cpp  rest.h
car/src/util/: log.cpp  log.h  util.cpp  util.h
car_kext/: install-kext.sh
html/: package-lock.json  package.json
html/config/: build-utils.js  helpers.js  webpack.common.js  webpack.dev.js  webpack.github-deploy.js  webpack.prod.js
html/src/: custom-typings.d.ts  index.html  polyfills.browser.ts
html/src/app/: app.component.ts  app.config.ts  app.html  app.module.ts  app.routes.ts  camera.service.ts  car.service.ts  event.service.ts  observers_state_messages.service.ts  race.service.ts
html/src/app/camera-status/: camera-status.component.ts  camera-status.html
html/src/app/car-status/: car-status.html  car-status.scss
html/src/app/header/: header.component.ts  header.html  header.scss
html/src/app/header/camera-status/: camera-status.component.ts  camera-status.html  camera-status.scss
html/src/app/header/car-status/: car-status.component.ts  car-status.html  car-status.scss
html/src/app/header/lifeline/: lifeline.component.ts
html/src/app/lifeline/: lifeline.component.ts  lifeline.html
html/src/app/manual/: manual.component.ts  manual.html  manual.module.ts  manual.scss
html/src/app/observer-preview/: observer-preview.component.ts  observer-preview.html  observer-preview.module.ts  observer-preview.scss
html/src/app/observer-tabs/: observer-tabs.component.ts  observer-tabs.html  observer-tabs.module.ts  observer-tabs.scss
html/src/app/observer-tabs/observer/: observer.component.ts  observer.html
html/src/app/observers/: abstract-observer.component.ts  observer.module.ts  observer.service.ts
html/src/app/observers-state-messages/: observer-state-messages.module.ts  observers-state-messages.component.ts  observers-state-messages.html  observers-state-messages.scss
html/src/app/observers-state-messages/lane_detection_state/: lane-detection-state.component.ts
html/src/app/observers-state-messages/traffic_light_state/: traffic-light-state.component.ts  traffic-light-state.html
html/src/app/observers/finish-detection/: finish-detection.component.ts  finish-detection.html  index.ts
html/src/app/preview/: preview.component.ts  preview.html  preview.module.ts  preview.scss
html/src/app/race/: race-strip.service.ts  race.component.ts  race.html  race.module.ts  race.routes.ts  race.scss  race.service.ts
html/src/app/webcam/: webcam.html
html/src/assets/config/: application.bb.json  application.local.json
html/src/styles/: styles.scss
resources/: camera.json  nginx_car_bb_wifi.conf  nginx_car_local.conf
resources/races/: drag_race.json  track_race.json
scripts/: move.sh  setup.sh  setup_bb.sh  stream.sh
src/: camera.json  cpu.cpp  cpu.h  drag_race.json  main.cpp  races.json
src/domain/: camera.cpp  camera.h  car.cpp  car.h  observer.h  pwm.cpp  pwmmock.cpp  steer.cpp
src/observers/: Line.cpp  Line.h  dummy.cpp  dummy.h  finish_detection.cpp  finish_detection.h  lane_detection.cpp  lane_detection.h  observer.h  opencv_line.cpp  opencv_line.h  traffic_light.cpp  traffic_light.h
src/races/: bla.json  drag_race.cpp  drag_race.h  drag_race.json  gijs_race.json  race.cpp  race.h  track_race.cpp  track_race.h  track_race.json
src/rest/: camera_resource.cpp  camera_resource.h  car_resource.cpp  car_resource.h  carmageddon_resource.h  carstatus_handler.cpp  carstatus_handler.h  lifeline_handler.cpp  lifeline_handler.h  observer_handler.cpp  observer_handler.h  observer_status_handler.cpp  observer_status_handler.h  race_resource.cpp  race_resource.h  rest.cpp  rest.h
src/util/: log.cpp  observer_group.cpp  observer_group.h  opencv_line.cpp  pid.cpp  pid.h  pid_controller.cpp  pid_controller.h  race_builder.cpp  race_builder.h  settings.cpp  settings.h  util.cpp  util.h
(+30 files in other folders)
